grading/project_1_results.txt
-- The C compiler identification is GNU 10.2.1
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found PythonInterp: /usr/bin/python3.9 (found version "3.9.2") 
-- Looking for pthread.h
-- Looking for pthread.h - found
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Failed
-- Looking for pthread_create in pthreads
-- Looking for pthread_create in pthreads - not found
-- Looking for pthread_create in pthread
-- Looking for pthread_create in pthread - found
-- Found Threads: TRUE  
-- Configuring done
-- Generating done
-- Build files have been written to: /home/parallels/autograder/csci-366-spring2023/grading/scripts/repos/diego_menegaz/lmsm
Scanning dependencies of target lmsm_lib
[  3%] Building C object CMakeFiles/lmsm_lib.dir/src/main.c.o
In file included from /home/parallels/autograder/csci-366-spring2023/grading/scripts/repos/diego_menegaz/lmsm/src/main.c:2:
/home/parallels/autograder/csci-366-spring2023/grading/scripts/repos/diego_menegaz/lmsm/src/lmsm.h:37:9: error: variably modified ‘memory’ at file scope
   37 |     int memory[TOP_OF_MEMORY + 1];
      |         ^~~~~~
/home/parallels/autograder/csci-366-spring2023/grading/scripts/repos/diego_menegaz/lmsm/src/lmsm.h:38:10: error: variably modified ‘output_buffer’ at file scope
   38 |     char output_buffer[OUTPUT_BUFFER_SIZE];
      |          ^~~~~~~~~~~~~
make[2]: *** [CMakeFiles/lmsm_lib.dir/build.make:82: CMakeFiles/lmsm_lib.dir/src/main.c.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:183: CMakeFiles/lmsm_lib.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
